--- a/index.html
+++ b/index.html
@@ -696,11 +696,11 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 <div class="columns">
 <div class="column" style="width:60%;">
 <h3 id="adjust-all-forecasts-for-coherency">Adjust all forecasts for coherency</h3>
-<p><span class="math display">\[\tilde{\bm{y}}_h=\bm{S}(\bm{S}'\bm{W}_h^{-1}\bm{S})^{-1}\bm{S}'\bm{W}_h^{-1}\hat{\bm{y}}_h.\]</span></p>
+<p><span class="math display">\[\tilde{\mathbf{y}}_h=\mathbf{S}(\mathbf{S}'\mathbf{W}_h^{-1}\mathbf{S})^{-1}\mathbf{S}'\mathbf{W}_h^{-1}\hat{\mathbf{y}}_h.\]</span></p>
 <p>Where:</p>
 <ul>
-<li><p><span class="math inline">\(\bm{S}\)</span> defines the coherency structure, and</p></li>
-<li><p><span class="math inline">\(\bm{W}_h\)</span> are weights for each forecast</p>
+<li><p><span class="math inline">\(\mathbf{S}\)</span> defines the coherency structure, and</p></li>
+<li><p><span class="math inline">\(\mathbf{W}_h\)</span> are weights for each forecast</p>
 <p>(usually based on in-sample fits)</p></li>
 </ul>
 </div></div>
