--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 <section id="section-3" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="australian-ambulance-costs">Australian ambulance costs</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -243,12 +245,14 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/mpho-mojapelo-s6Vv9u2qZyc-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-4" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="australian-ambulance-costs-1">Australian ambulance costs</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -260,7 +264,7 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/mpho-mojapelo-s6Vv9u2qZyc-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-5" class="slide level2">
 <h2></h2>
@@ -295,7 +299,9 @@
 <section id="section-6" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="australian-ambulance-costs-2">Australian ambulance costs</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -307,12 +313,14 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/mpho-mojapelo-s6Vv9u2qZyc-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-7" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="australian-ambulance-costs-3">Australian ambulance costs</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -324,7 +332,7 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/mpho-mojapelo-s6Vv9u2qZyc-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-8" class="slide level2">
 <h2></h2>
@@ -449,7 +457,9 @@
 <section id="section-14" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="ensemble-mixtures-1">Ensemble mixtures</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -461,7 +471,7 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/mpho-mojapelo-s6Vv9u2qZyc-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-15" class="slide level2">
 <h2></h2>
@@ -490,11 +500,13 @@
 </div>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/steven-wright-mq8QogEBy00-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-16" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="pbs-cost">PBS Cost</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -506,7 +518,7 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-17" class="slide level2">
 <h2></h2>
@@ -518,11 +530,13 @@
 <p>I’ll be showing decomposition via a STL model.</p>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/steven-wright-mq8QogEBy00-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-18" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="pbs-cost-1">PBS Cost</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -534,7 +548,7 @@
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-19" class="slide level2">
 <h2></h2>
@@ -561,11 +575,13 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </div>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/steven-wright-mq8QogEBy00-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-20" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="pbs-cost-2">PBS Cost</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -577,12 +593,14 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-21" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="pbs-cost-3">PBS Cost</h3>
 <div class="cell">
 <div class="cell-output-display">
@@ -594,14 +612,14 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-22" class="slide level2">
 <h2></h2>
 <div class="columns">
 <div class="column" style="width:60%;">
-<h3 id="forecasts-reconciliation">Forecasts reconciliation</h3>
-<p>Forecasts reconciliation combine forecasts from:</p>
+<h3 id="forecast-reconciliation">Forecast reconciliation</h3>
+<p>Forecast reconciliation combine forecasts from:</p>
 <ul>
 <li>a <strong>single</strong> model, for</li>
 <li><strong>each related</strong> series.</li>
@@ -623,7 +641,7 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </div>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/nicole-avagliano-TeLjs2pL5fA-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-23" class="slide level2">
 <h2></h2>
 <div class="columns">
@@ -663,7 +681,7 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </div>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/nicole-avagliano-TeLjs2pL5fA-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-24" class="slide level2">
 <h2></h2>
 <h3 id="pbs-scripts-by-atc-1-classification">PBS scripts by ATC 1 classification</h3>
@@ -677,19 +695,21 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 <section id="section-26" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="forecasts-arent-coherent">Forecasts aren’t coherent</h3>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="index_files/figure-revealjs/unnamed-chunk-19-1.png" width="960"></p>
+<p><img data-src="index_files/figure-revealjs/unnamed-chunk-19-1.png" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-27" class="slide level2">
 <h2></h2>
@@ -705,23 +725,25 @@ y_{T+h|T} = (T+R)_{T+h|T} + S_{T+h|T}
 </ul>
 </div></div>
 
-<img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right r-stretch"></section>
+<img data-src="backgrounds/nicole-avagliano-TeLjs2pL5fA-unsplash.jpg" class="image-right r-stretch"></section>
 <section id="section-28" class="slide level2">
 <h2></h2>
 <div class="columns">
-<div class="column" style="width:60%;">
+<div class="column" style="width:40%;">
+
+</div><div class="column" style="width:60%;">
 <h3 id="coherent-reconciled-forecasts">Coherent (reconciled) forecasts</h3>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="index_files/figure-revealjs/unnamed-chunk-20-1.png" width="960"></p>
+<p><img data-src="index_files/figure-revealjs/unnamed-chunk-20-1.png" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
 </div></div>
-<p><img data-src="backgrounds/andrik-langfield-0rTCXZM7Xfo-unsplash.jpg" class="image-right"></p>
+<p><img data-src="backgrounds/roberto-sorin-RS0-h_pyByk-unsplash.jpg" class="image-left"></p>
 </section>
 <section id="section-29" class="slide level2">
 <h2></h2>
